tests/resources/sanitizer_data/ubsan_asan_null_deref_read_debug.txt
crashme.cpp:105:18: runtime error: load of null pointer of type 'int'
SUMMARY: UndefinedBehaviorSanitizer: undefined-behavior crashme.cpp:105:18 in 
AddressSanitizer:DEADLYSIGNAL
=================================================================
==39505==ERROR: AddressSanitizer: SEGV on unknown address 0x000000000000 (pc 0x00010fa9a885 bp 0x7ffee0168830 sp 0x7ffee0168810 T0)
==39505==The signal is caused by a READ memory access.
==39505==Hint: address points to the zero page.
    #0 0x10fa9a884 in null_deref_read() crashme.cpp
    #1 0x10fa9abdb in main crashme.cpp:119
    #2 0x7fff20355620 in start (libdyld.dylib:x86_64+0x15620)

==39505==Register values:
rax = 0x0000000000000000  rbx = 0x00007ffee01688a0  rcx = 0x0000100000000000  rdx = 0x0000000000000000  
rdi = 0x0000000000000000  rsi = 0x000000011080fb18  rbp = 0x00007ffee0168830  rsp = 0x00007ffee0168810  
 r8 = 0x000000010fd8d400   r9 = 0x00007ffee0167af0  r10 = 0x0000000000000000  r11 = 0x0000000000000206  
r12 = 0x0000000000000000  r13 = 0x0000000000000000  r14 = 0x0000000000000000  r15 = 0x0000000000000000  
AddressSanitizer can not provide additional info.
SUMMARY: AddressSanitizer: SEGV crashme.cpp in null_deref_read()
==39505==ABORTING
